feat: product listing pagination

--- a/src/app/views/listing/listing.component.html
+++ b/src/app/views/listing/listing.component.html
@@ -1,22 +1,8 @@
-<c-row class="mt-4">
+<c-row>
   <c-col xs>
     <c-card class="mb-4">
       <c-card-body>
         <form cForm novalidate class="row g-3">
-          <c-col [md]="3">
-            <c-input-group>
-              <span cInputGroupText>
-                <svg [cIcon]="icons.cilSearch"></svg>
-              </span>
-              <input
-                [(ngModel)]="productFilter.id"
-                name="id"
-                autoComplete="id"
-                cFormControl
-                placeholder="ID"
-              />
-            </c-input-group>
-          </c-col>
           <c-col [md]="3">
             <c-input-group>
               <span cInputGroupText>
@@ -144,7 +130,7 @@
               cButton
               color="primary"
               [disabled]="loadings.product"
-              (click)="doGetProductList()"
+              (click)="filter()"
             >
               <c-spinner
                 *ngIf="loadings.product"
@@ -162,81 +148,163 @@
 </c-row>
 
 <ng-container *ngIf="!loadings.product; else spinner">
-  <c-row class="mt-4">
+  <c-row>
     <c-col xs>
-      <table
-        [hover]="true"
-        [responsive]="true"
-        [striped]="true"
-        align="middle"
-        cTable
-        class="mb-0 border"
-      >
-        <thead class="text-nowrap text-truncate">
-          <tr>
-            <th class="bg-body-tertiary">ID</th>
-            <th class="bg-body-tertiary">Name</th>
-            <th class="bg-body-tertiary">Price</th>
-            <th class="bg-body-tertiary text-center">Transmission</th>
-            <th class="bg-body-tertiary text-center">Engine</th>
-            <th class="bg-body-tertiary text-center">Seat</th>
-            <th class="bg-body-tertiary text-center">Deliverable</th>
-            <th class="bg-body-tertiary text-center">Brand</th>
-            <th class="bg-body-tertiary text-center">Status</th>
-          </tr>
-        </thead>
-        <tbody>
-          @for (data of productList; track data.id; let i = $index) {
-          <tr>
-            <td>
-              <div class="small text-body-secondary text-nowrap">
-                {{ data.id }}
-              </div>
-            </td>
-            <td>
-              <div class="small text-body-secondary text-nowrap">
-                {{ data.name }}
-              </div>
-            </td>
-            <td>
-              <div class="small text-body-secondary text-nowrap">
-                {{ data.price | currency : 'IDR' : 'symbol' : '1.0-0' : 'id' }}
-              </div>
-            </td>
-            <td class="text-center">
-              <div class="small text-body-secondary text-nowrap">
-                {{ data.transmission }}
-              </div>
-            </td>
-            <td class="text-center">
-              <div class="small text-body-secondary text-nowrap">
-                {{ data.engineType }}
-              </div>
-            </td>
-            <td class="text-center">
-              <div class="small text-body-secondary text-nowrap">
-                {{ data.seat }}
-              </div>
-            </td>
-            <td class="text-center">
-              <div class="small text-body-secondary text-nowrap">
-                {{ data.deliverable }}
-              </div>
-            </td>
-            <td class="text-center">
-              <div class="small text-body-secondary text-nowrap">
-                {{ data.brand }}
-              </div>
-            </td>
-            <td class="text-center">
-              <div class="small text-body-secondary text-nowrap">
-                {{ data.status }}
-              </div>
-            </td>
-          </tr>
-          }
-        </tbody>
-      </table>
+      <c-row>
+        <table
+          [hover]="true"
+          [responsive]="true"
+          [striped]="true"
+          align="middle"
+          cTable
+          class="mb-4 border"
+        >
+          <thead class="text-nowrap text-truncate">
+            <tr>
+              <th class="bg-body-tertiary">Name</th>
+              <th class="bg-body-tertiary">Price</th>
+              <th class="bg-body-tertiary text-center">Transmission</th>
+              <th class="bg-body-tertiary text-center">Engine</th>
+              <th class="bg-body-tertiary text-center">Seat</th>
+              <th class="bg-body-tertiary text-center">Deliverable</th>
+              <th class="bg-body-tertiary text-center">Brand</th>
+              <th class="bg-body-tertiary text-center">Status</th>
+            </tr>
+          </thead>
+          <tbody>
+            @for (data of dataPagination.list; track data.id) {
+            <tr class="pointer">
+              <td>
+                <div class="text-nowrap">
+                  {{ data.name }}
+                </div>
+              </td>
+              <td>
+                <div class="small text-body-secondary text-nowrap">
+                  {{
+                    data.price | currency : 'IDR' : 'symbol' : '1.0-0' : 'id'
+                  }}
+                </div>
+              </td>
+              <td class="text-center">
+                <div class="small text-body-secondary text-nowrap">
+                  {{ data.transmission }}
+                </div>
+              </td>
+              <td class="text-center">
+                <div class="small text-body-secondary text-nowrap">
+                  {{ data.engineType }}
+                </div>
+              </td>
+              <td class="text-center">
+                <div class="small text-body-secondary text-nowrap">
+                  {{ data.seat }}
+                </div>
+              </td>
+              <td class="text-center">
+                <div class="small text-body-secondary text-nowrap">
+                  {{ data.deliverable ? 'Yes' : 'No' }}
+                </div>
+              </td>
+              <td class="text-center">
+                <div class="small text-body-secondary text-nowrap">
+                  {{ data.brand }}
+                </div>
+              </td>
+              <td class="text-center">
+                <div class="small text-body-secondary text-nowrap">
+                  {{ data.status }}
+                </div>
+              </td>
+            </tr>
+            }
+          </tbody>
+        </table>
+      </c-row>
+
+      <c-row>
+        <c-col [md]="3">
+          <select
+            cFormControl
+            cSelect
+            [(ngModel)]="pagination.pageSize"
+            name="pageSize"
+            sizing="sm"
+            (ngModelChange)="
+              pagination.pageSize = $event;
+              pagination.pageNumber = 1;
+              doGetProductList()
+            "
+          >
+            <option [value]="5" [defaultSelected]="true">5 rows/page</option>
+            <option [value]="10">10 rows/page</option>
+            <option [value]="20">20 rows/page</option>
+            <option [value]="50">50 rows/page</option>
+          </select>
+        </c-col>
+
+        <c-col [md]="9">
+          <c-pagination align="end" size="sm">
+            <li
+              cPageItem
+              [disabled]="dataPagination.isFirstPage"
+              (click)="
+                pagination.pageNumber = dataPagination.navigateFirstPage;
+                doGetProductList()
+              "
+            >
+              <a cPageLink aria-label="First" [routerLink]
+                ><svg [cIcon]="icons.cilChevronDoubleLeft"></svg>
+              </a>
+            </li>
+            <li
+              cPageItem
+              [disabled]="dataPagination.isFirstPage"
+              (click)="
+                pagination.pageNumber = dataPagination.prePage;
+                doGetProductList()
+              "
+            >
+              <a cPageLink aria-label="Previous" [routerLink]
+                ><svg size="sm" [cIcon]="icons.cilChevronLeft"></svg>
+              </a>
+            </li>
+            @for (item of dataPagination.navigatepageNums; track $index) {
+            <li
+              cPageItem
+              [active]="pagination.pageNumber == item"
+              (click)="pagination.pageNumber = item; doGetProductList()"
+            >
+              <a cPageLink [routerLink]>{{ item }}</a>
+            </li>
+            }
+            <li
+              cPageItem
+              [disabled]="dataPagination.isLastPage"
+              (click)="
+                pagination.pageNumber = dataPagination.nextPage;
+                doGetProductList()
+              "
+            >
+              <a cPageLink aria-label="Next" [routerLink]
+                ><svg size="sm" [cIcon]="icons.cilChevronRight"></svg>
+              </a>
+            </li>
+            <li
+              cPageItem
+              [disabled]="dataPagination.isLastPage"
+              (click)="
+                pagination.pageNumber = dataPagination.navigateLastPage;
+                doGetProductList()
+              "
+            >
+              <a cPageLink aria-label="Last" [routerLink]
+                ><svg [cIcon]="icons.cilChevronDoubleRight"></svg>
+              </a>
+            </li>
+          </c-pagination>
+        </c-col>
+      </c-row>
     </c-col>
   </c-row>
 </ng-container>
