hotfix: clean up

--- a/src/app/views/billing/billing.component.html
+++ b/src/app/views/billing/billing.component.html
@@ -1,22 +1,8 @@
-<c-row class="mt-4">
+<c-row>
   <c-col xs>
     <c-card class="mb-4">
       <c-card-body>
         <form cForm novalidate class="row g-3">
-          <c-col [md]="3">
-            <c-input-group>
-              <span cInputGroupText>
-                <svg [cIcon]="icons.cilSearch"></svg>
-              </span>
-              <input
-                [(ngModel)]="billingFilter.id"
-                name="id"
-                autoComplete="id"
-                cFormControl
-                placeholder="ID"
-              />
-            </c-input-group>
-          </c-col>
           <c-col [md]="3">
             <c-input-group>
               <span cInputGroupText>
@@ -154,20 +140,19 @@
   </c-col>
 </c-row>
 
-<ng-container *ngIf="!loadings.billing; else spinner">
-  <c-row class="mt-4">
-    <c-col xs>
+<c-row>
+  <c-col xs>
+    <c-row>
       <table
         [hover]="true"
         [responsive]="true"
         [striped]="true"
         align="middle"
         cTable
-        class="mb-0 border"
+        class="mb-4 border"
       >
         <thead class="text-nowrap text-truncate">
           <tr>
-            <th class="bg-body-tertiary">ID</th>
             <th class="bg-body-tertiary">Order ID</th>
             <th class="bg-body-tertiary">Customer ID</th>
             <th class="bg-body-tertiary">Customer Name</th>
@@ -181,13 +166,10 @@
           </tr>
         </thead>
         <tbody>
-          @for (data of billingList; track data.id; let i = $index) {
+          @if (!loadings.billing && dataPagination.list != null &&
+          dataPagination.total > 0) { @for (data of dataPagination.list; track
+          data.id) {
           <tr>
-            <td>
-              <div class="small text-body-secondary text-nowrap">
-                {{ data.id }}
-              </div>
-            </td>
             <td>
               <div class="small text-body-secondary text-nowrap">
                 {{ data.orderId }}
@@ -244,13 +226,33 @@
               </div>
             </td>
           </tr>
+          } } @else if (!loadings.billing && dataPagination.total == 0) {
+          <tr class="pointer">
+            <td class="text-center" colspan="10">
+              <div class="small text-body-secondary text-nowrap">
+                No data record.
+              </div>
+            </td>
+          </tr>
+          } @if (loadings.billing) {
+          <tr>
+            <td
+              class="text-center"
+              colSpan="10"
+              [style.height]="pagination.pageSize * 2.5 + 'rem'"
+            >
+              <c-spinner variant="grow"></c-spinner>
+            </td>
+          </tr>
           }
         </tbody>
       </table>
-    </c-col>
-  </c-row>
-</ng-container>
+    </c-row>
 
-<ng-template #spinner>
-  <app-x-spinner></app-x-spinner>
-</ng-template>
+    <app-x-pagination
+      [pagination]="pagination"
+      [dataPagination]="dataPagination"
+      (paginationChange)="paginationChange($event)"
+    ></app-x-pagination>
+  </c-col>
+</c-row>
