feat: delete product

--- a/src/app/views/listing/listing.component.html
+++ b/src/app/views/listing/listing.component.html
@@ -278,35 +278,74 @@
   scrollable
   alignment="center"
   [visible]="isAddEditModalVisible"
-  (visibleChange)="modalVisibleChange($event)"
+  (visibleChange)="addEditModalVisibleChange($event)"
 >
   <c-modal-header>
     <h5 cModalTitle>Add/Edit Product</h5>
     <button (click)="toogleAddEditModal()" cButtonClose></button>
   </c-modal-header>
   <c-modal-body>
-    <ng-container *ngTemplateOutlet="longContent"></ng-container>
+    <app-create-edit
+      [requestModel]="addEditRequestModel"
+      (requestChange)="requestChange($event)"
+    ></app-create-edit>
   </c-modal-body>
-  <c-modal-footer>
-    <button (click)="toogleAddEditModal()" cButton color="secondary">
-      Close
-    </button>
-    <button
-      cButton
-      color="primary"
-      (click)="saveProduct()"
-      [disabled]="!addEditRequestModel.isValid() || loadings.productRegister"
-    >
-      @if (loadings.productRegister) {
-      <c-spinner aria-hidden="true" size="sm" variant="grow"></c-spinner>
-      } Save changes
-    </button>
+  <c-modal-footer class="d-flex justify-content-between">
+    <div>
+      @if (addEditRequestModel.id) {
+      <button
+        cButton
+        color="danger"
+        [cPopoverTrigger]="'click'"
+        [cPopover]="deleteConfirmationPopup"
+        [cPopoverOptions]="{ strategy: 'fixed',  }"
+      >
+        @if (loadings.productDeleting) {
+        <c-spinner aria-hidden="true" size="sm" variant="grow"></c-spinner>
+        } @else {
+        <svg [cIcon]="icons.cilTrash"></svg>
+        } Delete
+      </button>
+      <ng-template #deleteConfirmationPopup>
+        <h3 class="popover-header">Delete Confirmation</h3>
+        <div class="popover-body" id="">
+          <span>
+            Are you sure want to delete this product? Click confirm to delete.
+          </span>
+          <div class="mt-3 d-flex justify-content-end">
+            <button cButton color="danger" (click)="doDeleteProduct()">
+              @if (loadings.productDeleting) {
+              <c-spinner
+                aria-hidden="true"
+                size="sm"
+                variant="grow"
+              ></c-spinner>
+              } Confirm
+            </button>
+          </div>
+        </div>
+      </ng-template>
+      }
+    </div>
+    <div>
+      <button
+        (click)="toogleAddEditModal()"
+        cButton
+        color="secondary"
+        class="mx-3"
+      >
+        Close
+      </button>
+      <button
+        cButton
+        color="primary"
+        (click)="saveProduct()"
+        [disabled]="!addEditRequestModel.isValid() || loadings.productRegister"
+      >
+        @if (loadings.productRegister || loadings.productDeleting) {
+        <c-spinner aria-hidden="true" size="sm" variant="grow"></c-spinner>
+        } Save changes
+      </button>
+    </div>
   </c-modal-footer>
 </c-modal>
-
-<ng-template #longContent>
-  <app-create-edit
-    [requestModel]="addEditRequestModel"
-    (requestChange)="requestChange($event)"
-  ></app-create-edit>
-</ng-template>
